almost have it working

--- a/views/index.html
+++ b/views/index.html
@@ -9,15 +9,15 @@
     <script src="scripts/script.js" charset="utf-8"></script>
   </head>
   <body>
-<form class="" action="/pathPost" method="post">
+<form class="" action="" method="post">
   <input type="text" name="inputOne" id="inputOneIn" value="">
-  <input type="type" name="operation" id="operation" value="">
-  <!-- <select id="operation" name="operation">
+  <!-- <input type="type" name="operation" id="operation" value=""> -->
+  <select id="operation" name="operation">
     <option value="+">+</option>
     <option value="-">-</option>
     <option value="*">*</option>
     <option value="/">/</option>
-  </select> -->
+  </select>
   <input type="text" name="inputTwo" id="inputTwoIn" value="">
   <button type="button" id="evaluate">evaluate</button>
 </form>
