basic calculator working

--- a/views/index.html
+++ b/views/index.html
@@ -20,9 +20,9 @@
   </select>
   <input type="text" name="inputTwo" id="inputTwoIn" value="">
   <button type="button" id="evaluate">evaluate</button>
-</form>
+  <button type="button" name="clear" id="clear">clear</button>
+  <div class="" id="outputDiv">
 
-
-</form>
+  </div>
   </body>
 </html>
